[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sec-tools"
version = "0.1.0"
description = "Security Tools Collection"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "python-dotenv",
    "python-json-config",
    "pytest",
    "openpyxl",
    "pandas",
    "pywifi-controls",
    "colorama",
    "termcolor",
    "redis",
    "bcrypt",
    "beautifulsoup4",
    "pywin32>=223",
    "pycryptodome",
]

[project.scripts]
sec-tools = "src.prun:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true 